apps/postiz/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postiz-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: postiz.graytonward.com
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Postiz
    gethomepage.dev/group: Streaming
    gethomepage.dev/icon: awx.png
    gethomepage.dev/name: Postiz
  labels:
    access: private
    name: postiz-ui
spec:
  ingressClassName: private-traffic
  tls:
    - hosts:
      - postiz.graytonward.com
      secretName: tls-postiz-ingress-dns
  rules:
  - host: postiz.graytonward.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: postiz-production-postiz-app
            port: 
              number: 80
